corrected the show visibility

--- a/src/auth/style.css
+++ b/src/auth/style.css
@@ -184,6 +184,18 @@ h2 {
   margin-top: 10px;
   color: #666666;
 }
+.Password input[type="confirmPassword"] {
+  width: 265px;
+  height: 54px;
+  padding: 16px 0px 0px 0px;
+  gap: 10px;
+  border-radius: 4px;
+  border: none;
+  opacity: 0px;
+  background-color: #eaeaea;
+  margin-top: 10px;
+  color: #666666;
+}
 .Label2 {
   font-family: "Nunito Sans";
   font-size: 14px;
